--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^16.11.56",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "apexcharts": "^3.18.1",
+    "dayjs": "^1.11.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
